--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -56,8 +56,8 @@
                 <a href="#about" class="nav-item nav-link">내소개</a>
                 <a href="#skill" class="nav-item nav-link">기술경험</a>
             </div>
-            <a href="index.html" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
-                <h1 class="text-primary fw-bold m-0">김혜린</h1>
+            <a href="/article_list" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
+                <h1 class="text-primary fw-bold m-0">게시판</h1>
             </a>
             <div class="navbar-nav me-auto py-0">
                 <a href="#project" class="nav-item nav-link">프로젝트</a>
@@ -78,17 +78,17 @@
                     <h1 class="display-3 mb-3">김 혜 린</h1>
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">풀스택 웹 개발자, 귀여운 개발자, 프론트 고민중</div>
-                   <!--<div class="d-flex align-items-center pt-5">
+                    <!-- <div class="d-flex align-items-center pt-5">
                         <a href="" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
                             <span></span>
                         </button>
                         <h5 class="ms-4 mb-0 d-none d-sm-block">Play Video</h5>
-                    </div>
-                </div>-->
+                    </div> -->
+                </div>
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="../static/img/profile.png" alt="">
+                    <img class="img-fluid" src="/img/profile.png" alt="">
                 </div>
             </div>
         </div>
@@ -167,9 +167,10 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h1 class="display-5 mb-5">Skills & Experience</h1>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum clita dolor duo clita sit.</p>
-                    <h3 class="mb-4">My Skills</h3>
+                    <h1 class="display-5 mb-5">기술 & 경험</h1>
+                    <p class="mb-4">주요 웹 사이트 개발, 리눅스 웹 서버 구축/운영을 통해서 터미널을 통한 운영체제 서버 관리 이외 다양한
+                        프로그래밍 언어 학습, 최근에는 생성형 AI를 활용한 북리더 콘텐츠 개발에 관심을 가지고 있습니다.</p>
+                    <h3 class="mb-4">나의 기술들</h3>
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="skill mb-4">
@@ -192,11 +193,11 @@
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">PHP</h6>
-                                    <h6 class="font-weight-bold">90%</h6>
+                                    <h6 class="font-weight-bold">C#</h6>
+                                    <h6 class="font-weight-bold">50%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                         </div>
@@ -204,28 +205,28 @@
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="font-weight-bold">Javascript</h6>
-                                    <h6 class="font-weight-bold">90%</h6>
+                                    <h6 class="font-weight-bold">60%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">Angular JS</h6>
-                                    <h6 class="font-weight-bold">95%</h6>
+                                    <h6 class="font-weight-bold">Python</h6>
+                                    <h6 class="font-weight-bold">40%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">Wordpress</h6>
-                                    <h6 class="font-weight-bold">85%</h6>
+                                    <h6 class="font-weight-bold">React-native</h6>
+                                    <h6 class="font-weight-bold">40%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                         </div>
@@ -234,37 +235,37 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <ul class="nav nav-pills rounded border border-2 border-primary mb-5">
                         <li class="nav-item w-50">
-                            <button class="nav-link w-100 py-3 fs-5 active" data-bs-toggle="pill" href="#tab-1">Experience</button>
+                            <button class="nav-link w-100 py-3 fs-5 active" data-bs-toggle="pill" href="#tab-1">경험</button>
                         </li>
                         <li class="nav-item w-50">
-                            <button class="nav-link w-100 py-3 fs-5" data-bs-toggle="pill" href="#tab-2">Education</button>
+                            <button class="nav-link w-100 py-3 fs-5" data-bs-toggle="pill" href="#tab-2">교육</button>
                         </li>
                     </ul>
                     <div class="tab-content">
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row gy-5 gx-4">
                                 <div class="col-sm-6">
-                                    <h5>UI Designer</h5>
+                                    <h5>카카오톡 카피 페이지 만들기</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <p class="text-primary mb-1">2024.07~08</p>
                                     <h6 class="mb-0">Apex Software Inc</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Product Designer</h5>
+                                    <h5>롤 카피 페이지 만들기</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <p class="text-primary mb-1">2024.03~06</p>
                                     <h6 class="mb-0">Apex Software Inc</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Web Designer</h5>
+                                    <h5>리액트 배우는중</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <p class="text-primary mb-1">2024.09~</p>
                                     <h6 class="mb-0">Apex Software Inc</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Apps Designer</h5>
+                                    <h5>단원고 C++ 수업</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <p class="text-primary mb-1">2020~2022</p>
                                     <h6 class="mb-0">Apex Software Inc</h6>
                                 </div>
                             </div>
@@ -272,27 +273,27 @@
                         <div id="tab-2" class="tab-pane fade show p-0">
                             <div class="row gy-5 gx-4">
                                 <div class="col-sm-6">
-                                    <h5>UI Design Course</h5>
+                                    <h5>완성된 웹페이지 하나 만들기</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <p class="text-primary mb-1">내가 하고 싶은거</p>
                                     <h6 class="mb-0">Cambridge University</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>IOS Development</h5>
+                                    <h5>멋쟁이사자처럼 들어가기</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <p class="text-primary mb-1">내가 하고 싶은거</p>
                                     <h6 class="mb-0">Cambridge University</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Web Design</h5>
+                                    <h5>성결대학교 미디어소프트웨어학과</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <p class="text-primary mb-1">2023~</p>
                                     <h6 class="mb-0">Cambridge University</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Apps Design</h5>
+                                    <h5>공모전 나가기</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
+                                    <p class="text-primary mb-1">내가 하고싶은거</p>
                                     <h6 class="mb-0">Cambridge University</h6>
                                 </div>
                             </div>
