1~5week final completed

--- a/demo/src/main/resources/templates/hello2.html
+++ b/demo/src/main/resources/templates/hello2.html
@@ -6,5 +6,12 @@
     </head>
     <body>
         <h1>안녕하세요!</h1>
+        <p th:text="${data1}"></p>
+        <p th:text="${dataa}"></p>
+        <p th:text="${datab}"></p>
+        <p th:text="${datac}"></p>
+        <p th:text="${datad}"></p>
+
+        <a href="/index_copy">홈페이지 메인</a>
     </body>
 </html>
